--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,25 @@
 }
 .button-container {
   position: absolute;
-  top: 90%;
+  top: 87%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.season-title {
+  text-align: center;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.new-classics {
+  font-size: 50px;
+}
+.season-text {
+  letter-spacing: 3px;
+}
+.new-classics,
+.season-text,
+.new-description {
+  color: #ffffff;
 }
