--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,3 +1,19 @@
-.footer-bg{
-    background-color: E4E4E4 !important;
+footer {
+  background-color: #e4e4e4 !important;
+}
+ul {
+  list-style-type: none;
+}
+.ft-item-list {
+  font-size: 12px;
+  display: block;
+  text-decoration: none;
+  color: #333;
+}
+.ft-item {
+  font-weight: bold;
+  border-bottom: 2px solid #8b8a8a;
+}
+.company-address {
+  font-size: 12px;
 }
