--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
-#navbar-sticky-top{
-  background-color: #FFFFFF !important;
+#navbar-sticky-top {
+  background-color: #ffffff !important;
 }
 .navbar .megamenu {
   padding: 1rem;
@@ -60,7 +60,7 @@
   height: 30px;
   width: auto;
 }
-.nav-link{
+.nav-link {
   color: #222222;
   font-size: 20px;
 }
